Latest build deployed.

--- a/ch-chapter-title.html
+++ b/ch-chapter-title.html
@@ -118,14 +118,20 @@ window.MathJax = {
 <li class="toc-item toc-frontmatter"><div class="toc-title-box"><a href="frontmatter.html" class="internal"><span class="title">Front Matter</span></a></div></li>
 <li class="toc-item toc-chapter active">
 <div class="toc-title-box"><a href="ch-chapter-title.html" class="internal"><span class="codenumber">1</span> <span class="title">Chapter Title</span></a></div>
-<ul class="structural toc-item-list"><li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-section-name.html" class="internal"><span class="codenumber">1.1</span> <span class="title">Our first steps.</span></a></div></li></ul>
+<ul class="structural toc-item-list">
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-section-name.html" class="internal"><span class="codenumber">1.1</span> <span class="title">Our first steps.</span></a></div></li>
+<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-advanced-topics.html" class="internal"><span class="codenumber">1.2</span> <span class="title"></span></a></div></li>
+</ul>
 </li>
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="chapter" id="ch-chapter-title"><h2 class="heading">
 <span class="type">Chapter</span><span class="space"> </span><span class="codenumber">1</span><span class="space"> </span><span class="title">Chapter Title</span>
 </h2>
-<section class="introduction" id="ch-chapter-title-2"><div class="para" id="ch-chapter-title-2-1">Text before the first section.</div></section><nav class="summary-links"><ul><li><a href="sec-section-name.html" class="internal"><span class="codenumber">1.1</span> <span class="title">Our first steps.</span></a></li></ul></nav></section></div>
+<section class="introduction" id="ch-chapter-title-2"><div class="para" id="ch-chapter-title-2-1">Text before the first section.</div></section><nav class="summary-links"><ul>
+<li><a href="sec-section-name.html" class="internal"><span class="codenumber">1.1</span> <span class="title">Our first steps.</span></a></li>
+<li><a href="sec-advanced-topics.html" class="internal"><span class="codenumber">1.2</span> <span class="title"></span></a></li>
+</ul></nav></section></div>
 <div class="ptx-content-footer">
 <a class="previous-button button" href="frontmatter-2.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="sec-section-name.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
