Latest build deployed.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a class="button is-info is-outlined is-fullwidth" href="./pdfs/main3.pdf"><span class="icon is-small"><i class="fas fa-download"></i></span> <span>Download PDF</span></a>
             </p>
             <p>
-              <a class="button is-info is-outlined is-fullwidth" href="./pdfs/main4.pdf"><span class="icon is-small"><i class="fas fa-download"></i></span> <span>Download PDF</span></a>
+              <a class="button is-info is-outlined is-fullwidth" href="./pdfs/main4.pdf"><span class="icon is-small"><i class="fas fa-download"></i></span> <span>Download PDF 4th edition</span></a>
             </p>
             <p>
               <a class="button is-info is-outlined is-fullwidth" href="https://amzn.to/2BTlcR7" target="_blank"><span class="icon is-small"><i class="fab fa-amazon"></i> </span> <span>Buy paperback</span></a>
